# course_project_1

./: .gitignore  README.md  pyproject.toml
src/: main.py  report.json  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py
